# cronexpr-translator

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/translator/: enums.py  translator.py
tests/: test_translator.py
tests/translator/: test_translator.py
