[metadata]
name = cronexpr-translator
version = 1.0.0
author = poliambro
author_email = poliana.ambrosio.campos@gmail.com
description = The python translator for cron expressions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/poliambro/cronexpr-translator
license_files=LICENSE
description-file=README.md